Fix random information section left-right spacing

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ a {
 }
 
 .card {
-    max-width: 200px;
+    max-width: 180px;
+    height: auto;
     text-align: center;
 }
 
@@ -188,9 +189,9 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    flex: 1;
     justify-content: baseline;
     gap: 10px;
+    flex: auto;
 }
 
 .quote {
